030-software/fluxcd/apps/commander/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: commander
  labels:
    namespace: commander
