030-software/fluxcd/apps/commander/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commander
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: commander
  template:
    metadata:
      labels:
        app: commander
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: commander
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: commander
      containers:
        - name: commander
          image: ghcr.io/coderaiser/cloudcmd:19.21.1-alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          args:
            - --theme
            - dark
            - --menu
            - supermenu
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: backups
              mountPath: /mnt/proxmox/backups
            - name: content
              mountPath: /mnt/proxmox/content
            - name: hanzo
              mountPath: /mnt/hanzo
            - name: genji
              mountPath: /mnt/genji
            - name: downloads
              mountPath: /mnt/downloads
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 1024Mi
      volumes:
        - name: backups
          nfs:
            server: 10.42.60.50
            path: /backups
        - name: content
          nfs:
            server: 10.42.60.51
            path: /content
        - name: hanzo
          nfs:
            server: hanzo.home.arpa
            path: /
        - name: genji
          nfs:
            server: genji.home.arpa
            path: /
        - name: downloads
          nfs:
            server: 10.99.242.42
            path: /
