030-software/fluxcd/apps/commander/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: commander
  annotations:
    dashboard.${domain}/name: commander
    dashboard.${domain}/url: https://commander.${domain}/mnt/
    dashboard.${domain}/icon: folder
spec:
  hostnames:
  - commander.home.arpa
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: commander
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
